@@ -5,6 +5,7 @@ PostgreSQL 12-18 required. GEOS 3.8+ required. Proj 6.1+ required.
 
 * Bug fixes *
 
+- #5951, Fix crash in ST_GetFaceEdges with corrupted topology (Sandro Santilli)
 - #5947, [topology] Fix crash in ST_ModEdgeHeal (Sandro Santilli)
 - #5925, #5946, [topology] Have GetFaceContainingPoint survive EMPTY edges (Sandro Santilli)
 - #5936, [topology] Do script-based upgrade in a single transaction (Sandro Santilli)
